# local-llm-cli

./: .gitignore  README.md  client.html  pyproject.toml
.claude/: settings.local.json
local_llm/: __init__.py  budget.py  chat.py  cli.py  config.py  constants.py  daemon.py  daemon_client.py  doctor.py  engine.py  hf_cache.py  launchd.py  memory.py  mlx_runner.py  models.py  runtime.py  server.py  ssh.py  ui.py
local_llm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
local_llm/tui/: __init__.py  app.py  commands.py  custom_commands.py  history.py
tests/: test_budget.py  test_config.py  test_hf_cache.py  test_models.py  test_profile_detection.py  test_runtime.py  test_server.py  test_tui_app.py  test_tui_support.py
