[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-llm"
version = "0.1.0"
description = "CLI tool to manage and run local LLMs using MLX-LM on macOS"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "local-llm contributors"}]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "textual>=0.80.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
local-llm = "local_llm.cli:main"

[tool.setuptools.packages.find]
include = ["local_llm*"]
